@startuml
title Class Diagram - Package Model

skinparam classAttributeIconSize 0

class Usuario {
  -nombre: String
  -contrasena: String
  -fotoPerfil: String
}

class Mensaje {
  -remitente: String
  -destinatario: String
  -contenido: String
  -fechaEnvio: LocalDateTime
}

class Adjunto {
  -nombreArchivo: String
  -rutaArchivo: String
  -tamano: long
  -tipoMime: String
}

class GestorUsuarios {
  -usuarios: List<Usuario>
}

class GestorConversacion {
  -mensajes: List<Mensaje>
}

' --- Relaciones ---

GestorUsuarios "1" o-- "*" Usuario : contiene
GestorConversacion "1" o-- "*" Mensaje : gestiona
Mensaje "1" *-- "0..1" Adjunto : puede tener

' Relación implícita a través de los nombres de usuario
Mensaje ..> Usuario : (remitente)
Mensaje ..> Usuario : (destinatario)

@enduml
